--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,20 @@
 @tailwind components;
 @tailwind utilities;
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
+
